--- a/src/index.css
+++ b/src/index.css
@@ -6,29 +6,29 @@
   --white: #fff;
   --gray: #f4f6f8;
   --dark: #333;
-  
+
   --border-color: #e0e0e0;
   --text-light: #555;
-  
+
   --header: 80px;
   --radius: 8px;
   --radius-md: 12px;
   --radius-lg: 16px;
-  
+
   --gap-sm: 0.5rem;
   --gap: 1rem;
   --gap-lg: 1.5rem;
   --gap-xl: 2rem;
-  
+
   --shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   --shadow-md: 0 4px 12px rgba(0, 0, 0, 0.1);
-  
+
   --text-sm: 0.9rem;
   --text: 1rem;
   --text-lg: 1.1rem;
   --text-xl: 1.2rem;
   --text-xxl: 2.2rem;
-  
+
   --transition: 0.3s ease;
 }
 
@@ -39,8 +39,9 @@
 body {
   margin: 0;
   padding-top: var(--header);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   background-color: var(--gray);
   color: var(--dark);
 }
@@ -113,7 +114,9 @@ form input[type="search"]:focus {
   border-color: var(--blue);
 }
 
-form button, .book-item-button, .action-button {
+form button,
+.book-item-button,
+.action-button {
   padding: var(--gap-sm) var(--gap-lg);
   border-radius: var(--radius);
   border: none;
@@ -127,7 +130,8 @@ form button, .book-item-button, .action-button {
   gap: var(--gap-sm);
 }
 
-form button:hover, .book-item-button.like:hover {
+form button:hover,
+.book-item-button.like:hover {
   background-color: var(--dark-blue);
 }
 
@@ -146,13 +150,24 @@ select:focus {
   border-color: var(--blue);
 }
 
+.no-books-message {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: var(--text-xl);
+  color: var(--text-light);
+  text-align: center;
+  width: 100%;
+}
+
 .books-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: var(--gap-lg);
   padding: var(--gap-xl);
+  min-height: 60vh;
 }
-
 .book-item {
   border: 1px solid var(--border-color);
   border-radius: var(--radius-md);
@@ -221,7 +236,8 @@ select:focus {
   text-align: left;
 }
 
-.book-item-authors, .book-authors {
+.book-item-authors,
+.book-authors {
   font-size: var(--text);
   color: var(--blue);
   margin-bottom: var(--gap-sm);
@@ -241,7 +257,8 @@ select:focus {
   flex-grow: 1;
 }
 
-.book-item-actions, .book-actions {
+.book-item-actions,
+.book-actions {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -255,7 +272,8 @@ select:focus {
   justify-content: center;
 }
 
-.book-item-button.like.liked, .book-item-button.like.liked:hover {
+.book-item-button.like.liked,
+.book-item-button.like.liked:hover {
   background-color: var(--red);
 }
 
